# magi

./: .gitignore  Justfile  LICENSE  README.md  magi  magi.yaml  pyproject.toml
src/magi/: __init__.py  agent_builder.py  arguments.py  config.py  io.py  ioc.py  repl.py  session.py  tools.py
