[project]
name = "magi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shawn Eddy", email = "ymiseddy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
magi = "magi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
